添加curl多线程下载

--- a/.gitignore
+++ b/.gitignore
@@ -240,3 +240,20 @@
 /XGame/XSrc/XPatcher/XPatcher/Debug/*.idb
 /XGame/XSrc/XPatcher/XPatcher/Debug/*.pdb
 /XGame/XSrc/InternetCode/file_downloader_curl/*.suo
+/XGame/XSrc/Debug/*.png
+/XGame/XSrc/XDemo/curl_test/*.png
+/XGame/XSrc/XDemo/patcher_demo/Debug/*.htm
+/XGame/XSrc/XDemo/patcher_demo/Debug/*.dep
+/XGame/XSrc/XDemo/patcher_demo/Debug/*.manifest
+/XGame/XSrc/XDemo/patcher_demo/Debug/*.res
+/XGame/XSrc/XDemo/patcher_demo/Debug/*.obj
+/XGame/XSrc/XDemo/patcher_demo/Debug/*.pch
+/XGame/XSrc/XDemo/patcher_demo/Debug/*.idb
+/XGame/XSrc/XDemo/patcher_demo/Debug/*.pdb
+/XGame/XSrc/XDemo/patcher_demo/*.txt
+/XGame/XSrc/XDemo/patcher_demo/*.zip
+/XGame/XSrc/XDemo/patcher_demo/*.docx
+/XGame/XSrc/XDemo/patcher_demo/*.png
+/XGame/XSrc/XDemo/patcher_demo/*.user
+/XGame/XSrc/XEngine/XGLESRender/*.txt
+/XGame/XSrc/XEngine/XGLESRender/*.user
