--- a/XGame/XSrc/XEngine/XPlatform/XPlatform.vcproj
+++ b/XGame/XSrc/XEngine/XPlatform/XPlatform.vcproj
@@ -294,6 +294,14 @@
 			Name="Manager"
 			>
 			<File
+				RelativePath=".\manager\XFilePackManager.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\manager\XFilePackManager.h"
+				>
+			</File>
+			<File
 				RelativePath=".\manager\XTextureManager.cpp"
 				>
 			</File>
@@ -389,6 +397,14 @@
 		<Filter
 			Name="util"
 			>
+			<File
+				RelativePath=".\util\XLog.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\util\XLog.h"
+				>
+			</File>
 			<File
 				RelativePath=".\util\XMD5.cpp"
 				>
