--- a/XGame/XSrc/XPatcher/XPatcher/XPatcher.vcproj
+++ b/XGame/XSrc/XPatcher/XPatcher/XPatcher.vcproj
@@ -79,7 +79,7 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				CommandLine="xcopy /y /s /r /d &quot;$(TargetPath)&quot; &quot;..\..\..\XLib\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)*.h&quot; &quot;..\..\..\XInc\&quot;"
+				CommandLine="xcopy /y /s /r /d &quot;$(TargetPath)&quot; &quot;..\..\..\XLib\&quot;&#x0D;&#x0A;xcopy /y /s /r /d &quot;$(InputDir)*.h&quot; &quot;..\..\..\XInc\&quot;&#x0D;&#x0A;"
 			/>
 		</Configuration>
 		<Configuration
@@ -155,6 +155,10 @@
 			>
 			<File
 				RelativePath=".\XPatcherDownload.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\XPathcherFile.cpp"
 				>
 			</File>
 		</Filter>
