增加异常处理， 添加执行Lua函数方法

--- a/XGame/XSrc/XEngine/XLua/XLua.vcproj
+++ b/XGame/XSrc/XEngine/XLua/XLua.vcproj
@@ -153,6 +153,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\XLuaJailbreakException.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\XLuaPubFunc.cpp"
 				>
 			</File>
@@ -168,6 +172,10 @@
 			</File>
 			<File
 				RelativePath=".\XLuaDefine.h"
+				>
+			</File>
+			<File
+				RelativePath=".\XLuaJailbreakException.h"
 				>
 			</File>
 			<File
